cmake_minimum_required(VERSION 3.12)
project(MD5_master C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft/inc)

add_executable(MD5_master
        inc/ft_ssl_md5.h
        libft/inc/libft.h
        libft/src/char_helper.c
        libft/src/ft_abs.c
        libft/src/ft_atoi.c
        libft/src/ft_atoi_base.c
        libft/src/ft_bzero.c
        libft/src/ft_countword_delim.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isblank.c
        libft/src/ft_iscntrl.c
        libft/src/ft_isdigit.c
        libft/src/ft_isgraph.c
        libft/src/ft_islower.c
        libft/src/ft_isnbr.c
        libft/src/ft_isprint.c
        libft/src/ft_ispunct.c
        libft/src/ft_isspace.c
        libft/src/ft_isupper.c
        libft/src/ft_itoa.c
        libft/src/ft_itoa_base.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstaddend.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstend.c
        libft/src/ft_lstfind_nbr.c
        libft/src/ft_lstinsert.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstlen.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_lstreplace.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_nbrlen.c
        libft/src/ft_printf.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_putstrarr.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdelarr.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strrev.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_swap_nbr.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/get_next_line.c
        libft/src/handle_bx.c
        libft/src/handle_char.c
        libft/src/handle_d.c
        libft/src/handle_o.c
        libft/src/handle_other.c
        libft/src/handle_p.c
        libft/src/handle_string.c
        libft/src/handle_u.c
        libft/src/handle_x.c
        libft/src/num_helper.c
        libft/src/parse_convert.c
        src/errors_ssl.c
        src/main.c
        src/md5.c
        src/parsing.c
        src/parsing_s_string.c
        src/sha224.c
        src/sha256.c
        src/sha384.c
        src/sha512.c
        src/ssl_swap_words.c
        src/utils.c)
